add_library(classes
atomtype.h
colourscale.h
grid.h
restraint.h
ring.h
site.h
undoevent.h
undostate.h
atomtype.cpp
colourscale.cpp
grid.cpp
restraint.cpp
ring.cpp
site.cpp
undoevent.cpp
undostate.cpp
)

include_directories(
../
${QT_INCLUDE_DIR}
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
${CMAKE_SOURCE_DIR}/src/gui
)
