add_library(classes
atomtype.h
colourscale.h
grid.h
prefs.h
restraint.h
ring.h
site.h
atomtype.cpp
colourscale.cpp
grid.cpp
prefs.cpp
restraint.cpp
ring.cpp
site.cpp
)

include_directories(
../
${QT_INCLUDE_DIR}
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
${CMAKE_SOURCE_DIR}/src/gui
)
