noinst_LIBRARIES = libclasses.a 

libclasses_a_SOURCES = atomaddress.cpp atom.cpp atomtype.cpp bond.cpp bundle.cpp cell.cpp clipboard.cpp dnchar.cpp energystore.cpp forcefield.cpp fourier.cpp generator.cpp glyph.cpp grid.cpp measurement.cpp pattern.cpp region.cpp restraint.cpp ring.cpp site.cpp spacegroup.cpp undostate.cpp variables.cpp

noinst_HEADERS = atomaddress.h atom.h atomtype.h bond.h bundle.h cell.h clipboard.h dnchar.h energystore.h forcefield.h fourier.h generator.h glyph.h grid.h measurement.h pattern.h region.h restraint.h ring.h site.h spacegroup.h undostate.h variables.h

INCLUDES = -I../ @GUI_CFLAGS@
