noinst_LIBRARIES = libclasses.a

libclasses_a_SOURCES = atomaddress.cpp atom.cpp atomtype.cpp bond.cpp bundle.cpp cell.cpp clipboard.cpp colourscale.cpp colourscalepoint.cpp dnchar.cpp energystore.cpp forcefield.cpp forcefieldatom.cpp forcefieldbound.cpp forcefieldparams.cpp glyph.cpp grid.cpp log.cpp measurement.cpp pattern.cpp region.cpp restraint.cpp ring.cpp site.cpp undoevent.cpp undostate.cpp

noinst_HEADERS = atomaddress.h atom.h atomtype.h bond.h bundle.h cell.h clipboard.h colourscale.h colourscalepoint.h dnchar.h energystore.h forcefield.h forcefieldatom.h forcefieldbound.h forcefieldparams.h glyph.h grid.h log.h measurement.h pattern.h region.h restraint.h ring.h site.h undoevent.h undostate.h

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @GUI_CFLAGS@
