noinst_LIBRARIES = libclasses.a

libclasses_a_SOURCES = atomtype.cpp colourscale.cpp forcefieldatom.cpp forcefieldbound.cpp grid.cpp prefs.cpp restraint.cpp ring.cpp site.cpp

noinst_HEADERS = atomtype.h colourscale.h forcefieldatom.h forcefieldbound.h grid.h prefs.h restraint.h ring.h site.h

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @GUI_CFLAGS@
