add_library(command
commandlist.h 
commands.h
analyse.cpp 
atom.cpp 
bonds.cpp 
build.cpp 
cell.cpp 
charge.cpp 
commands.cpp 
commandlist.cpp 
disorder.cpp 
energy.cpp 
expression.cpp 
ff.cpp 
flow.cpp 
forces.cpp 
functions.cpp 
glyph.cpp 
grid.cpp 
image.cpp 
labels.cpp 
mc.cpp 
messaging.cpp 
minimise.cpp 
model.cpp 
pattern.cpp 
prefs.cpp 
readwrite.cpp 
script.cpp 
select.cpp 
site.cpp 
system.cpp 
traj.cpp 
transform.cpp 
variables.cpp 
view.cpp
)

include_directories(
../
)
