add_library(command
commandlist.h 
commands.h
expression.h
expressionnode.h
filter.h
format.h
formatnode.h
variable.h
variablelist.h
analyse.cpp 
atom.cpp 
bonds.cpp 
build.cpp 
cell.cpp 
charge.cpp 
colourscale.cpp
commands.cpp 
commandlist.cpp 
disorder.cpp 
edit.cpp
energy.cpp 
expression.cpp 
expressionnode.cpp 
filter.cpp
flow.cpp 
forcefield.cpp 
forces.cpp 
format.cpp
formatnode.cpp
functions.cpp 
glyph.cpp 
grid.cpp 
image.cpp 
labels.cpp 
mc.cpp 
measure.cpp
messaging.cpp 
minimise.cpp 
model.cpp 
pattern.cpp 
prefs.cpp 
readwrite.cpp 
script.cpp 
select.cpp 
site.cpp 
system.cpp 
trajectory.cpp 
transform.cpp 
variable.cpp 
variables.cpp 
variablelist.cpp 
view.cpp
)

include_directories(
../
${QT_INCLUDE_DIR}
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
${CMAKE_SOURCE_DIR}/src/gui
)
