add_library(command
analyse.cpp
atom.cpp
bonds.cpp
build.cpp
cell.cpp
charge.cpp
colourscale.cpp
commands.cpp
commands.h
disorder.cpp
edit.cpp
energy.cpp
flow.cpp
forcefield.cpp
forces.cpp
functions.cpp
glyph.cpp
grid.cpp
image.cpp
labels.cpp
math.cpp
mc.cpp
measure.cpp
messaging.cpp
minimise.cpp
model.cpp
modelextras.cpp
operators.cpp
pattern.cpp
pores.cpp
readwrite.cpp
script.cpp
select.cpp
site.cpp
string.cpp
system.cpp
trajectory.cpp
transform.cpp
view.cpp
)
target_include_directories(command PRIVATE
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_BINARY_DIR}/src
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Gui_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/src/gui
)

target_link_libraries(command gui) 
