noinst_LIBRARIES = libcommand.a

libcommand_a_SOURCES = analyse.cpp atom.cpp bonds.cpp build.cpp cell.cpp charge.cpp commands.cpp commandlist.cpp disorder.cpp energy.cpp expression.cpp ff.cpp field.cpp flow.cpp forces.cpp functions.cpp grid.cpp image.cpp labels.cpp mc.cpp messaging.cpp minimise.cpp model.cpp pattern.cpp prefs.cpp readwrite.cpp select.cpp site.cpp system.cpp traj.cpp transform.cpp variables.cpp view.cpp

noinst_HEADERS = commandlist.h commands.h

INCLUDES = -I../ @GUI_CFLAGS@
