noinst_LIBRARIES = libcommand.a

libcommand_a_SOURCES = analyse.cpp atom.cpp bonds.cpp build.cpp cell.cpp charge.cpp colourscale.cpp commands.cpp disorder.cpp edit.cpp energy.cpp flow.cpp forcefield.cpp forces.cpp functions.cpp glyph.cpp grid.cpp image.cpp labels.cpp math.cpp mc.cpp measure.cpp messaging.cpp minimise.cpp model.cpp operators.cpp pattern.cpp prefs.cpp readwrite.cpp script.cpp select.cpp site.cpp string.cpp system.cpp trajectory.cpp transform.cpp view.cpp

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @GUI_CFLAGS@
