# Don't forget to include output directory, otherwise
# the UI file won't be wrapped!
INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR} 
  ${CMAKE_CURRENT_BINARY_DIR}/../
  ${Qt5Widgets_INCLUDE_DIRS}
  ./
  ../
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_BINARY_DIR}
)

# Meta-Objects
SET(gui_MOC_HDRS
  about.h
  command.h
  disorderoptions.h
  disorderwizard.h
  ffeditor.h
  forcefields.h
  fragments.h
  glyphs.h
  layoutlist.h
  loadmodel.h
  mainwindow.h
  popupbuildaddh.h
  popupbuildgrow.h
  popupbuildrebond.h
  popupbuildtransmute.h
  popupcellangles.h
  popupcelllengths.h
  popupcellmatrix.h
  popupcellmiller.h
  popupcellreplicate.h
  popupcellscale.h
  popupcellspacegroup.h
  popupcolour.h
  popupelementcommon.h
  popupelementtable.h
  popupgridmatrix.h
  popupgridorigin.h
  popupgridshift.h
  popupgridstyle.h
  popupmeasureangle.h
  popupmeasureclear.h
  popupmeasuredistance.h
  popupmeasuretorsion.h
  popuptransformangle.h
  popuptransformcentre.h
  popuptransformdistance.h
  popuptransformflip.h
  popuptransformreposition.h
  popuptransformshift.h
  popuptransformtorsion.h
  popuptransformtranslate.h
  popupviewcolourscheme.h
  popupviewreset.h
  popupviewstyle.h
  pores.h
  prefs.h
  progress.h
  saveimage.h
  scriptmovie.h
  selectfilter.h
  selectpattern.h
  selectvariable.h
  transform.h
  vibrations.h
  viewbasis.h
  vieweigenvector.h
  zmatrix.h
  tcolourframe.hui
  tcolourwheel.hui
  tdoublespindelegate.hui
  texponentialspin.hui
  textratreewidgetitem.h
  tintegerspindelegate.hui
  tmenubutton.hui
  tprocess.hui
  tprompt.hui
  ttablewidget.hui
  ttreewidget.hui
  viewer.hui
)
QT5_WRAP_CPP(gui_MOC_SRCS ${gui_MOC_HDRS})

set(treegui_MOC_HDRS
  treegui.h
)
QT5_WRAP_CPP(treegui_MOC_SRCS ${treegui_MOC_HDRS})

# User Interface Files
SET(gui_UIS
  about.ui
  command.ui
  disorderoptions.ui
  disorderwizard.ui
  ffeditor.ui
  forcefields.ui
  fragments.ui
  glyphs.ui
  loadmodel.ui
  mainwindow.ui
  popupbuildaddh.ui
  popupbuildgrow.ui
  popupbuildrebond.ui
  popupbuildtransmute.ui
  popupcellangles.ui
  popupcelllengths.ui
  popupcellmatrix.ui
  popupcellmiller.ui
  popupcellreplicate.ui
  popupcellscale.ui
  popupcellspacegroup.ui
  popupcolour.ui
  popupelementcommon.ui
  popupelementtable.ui
  popupgridmatrix.ui
  popupgridorigin.ui
  popupgridshift.ui
  popupgridstyle.ui
  popupmeasureangle.ui
  popupmeasureclear.ui
  popupmeasuredistance.ui
  popupmeasuretorsion.ui
  popuptransformangle.ui
  popuptransformcentre.ui
  popuptransformdistance.ui
  popuptransformflip.ui
  popuptransformreposition.ui
  popuptransformshift.ui
  popuptransformtorsion.ui
  popuptransformtranslate.ui
  popupviewcolourscheme.ui
  popupviewreset.ui
  popupviewstyle.ui
  pores.ui
  prefs.ui
  progress.ui
  saveimage.ui
  scriptmovie.ui
  selectfilter.ui
  selectpattern.ui
  selectvariable.ui
  transform.ui
  vibrations.ui
  viewbasis.ui
  vieweigenvector.ui
  zmatrix.ui
)
QT5_WRAP_UI(gui_UIS_H ${gui_UIS})

SET(treegui_UIS
  treegui.ui
)
QT5_WRAP_UI(treegui_UIS_H ${treegui_UIS})

# Source files
set(gui_SRCS
  useractions.h
  useractions.cpp
  about_funcs.cpp
  command_funcs.cpp
  disorderoptions_funcs.cpp
  disorderwizard_funcs.cpp
  ffeditor_funcs.cpp
  forcefields_funcs.cpp
  fragments_funcs.cpp
  glyphs_funcs.cpp
  layoutlist.cpp
  loadmodel_funcs.cpp
  mainmenuactions.cpp
  mainwindow_atoms.cpp
  mainwindow_models.cpp
  mainwindow_context.cpp
  mainwindow_funcs.cpp
  mainwindow_image.cpp
  mainwindow_messages.cpp
  mainwindow_models.cpp
  mainwindow_panel_build.cpp
  mainwindow_panel_calculate.cpp
  mainwindow_panel_cell.cpp
  mainwindow_panel_grids.cpp
  mainwindow_panel_home.cpp
  mainwindow_panel_select.cpp
  mainwindow_panel_transform.cpp
  mainwindow_panel_trajectory.cpp
  mainwindow_panel_view.cpp
  mainwindow_update.cpp
  popupbuildaddh_funcs.cpp
  popupbuildgrow_funcs.cpp
  popupbuildrebond_funcs.cpp
  popupbuildtransmute_funcs.cpp
  popupcellangles_funcs.cpp
  popupcelllengths_funcs.cpp
  popupcellmatrix_funcs.cpp
  popupcellmiller_funcs.cpp
  popupcellreplicate_funcs.cpp
  popupcellscale_funcs.cpp
  popupcellspacegroup_funcs.cpp
  popupcolour_funcs.cpp
  popupelementcommon_funcs.cpp
  popupelementtable_funcs.cpp
  popupgridmatrix_funcs.cpp
  popupgridorigin_funcs.cpp
  popupgridshift_funcs.cpp
  popupgridstyle_funcs.cpp
  popupmeasureangle_funcs.cpp
  popupmeasureclear_funcs.cpp
  popupmeasuredistance_funcs.cpp
  popupmeasuretorsion_funcs.cpp
  popuptransformangle_funcs.cpp
  popuptransformcentre_funcs.cpp
  popuptransformdistance_funcs.cpp
  popuptransformflip_funcs.cpp
  popuptransformreposition_funcs.cpp
  popuptransformshift_funcs.cpp
  popuptransformtorsion_funcs.cpp
  popuptransformtranslate_funcs.cpp
  popupviewcolourscheme_funcs.cpp
  popupviewreset_funcs.cpp
  popupviewstyle_funcs.cpp
  pores_funcs.cpp
  prefs_funcs.cpp
  progress_funcs.cpp
  saveimage_funcs.cpp
  scriptmovie_funcs.cpp
  selectfilter_funcs.cpp
  selectpattern_funcs.cpp
  selectvariable_funcs.cpp
  settings.cpp
  viewer_funcs.cpp
  viewer_key.cpp
  viewer_model.cpp
  viewer_mouse.cpp
  viewer_offscreen.cpp
  viewer_scene.cpp
  viewer_user.cpp
  viewer_useractions.cpp
  tcolourframe_funcs.cpp
  tcolourwheel_funcs.cpp
  tmenubutton_funcs.cpp
  tdoublespindelegate_funcs.cpp
  texponentialspin_funcs.cpp
  tintegerspindelegate_funcs.cpp
  transform_funcs.cpp
  tprocess_funcs.cpp
  tprompt_funcs.cpp
  textratreewidgetitem_funcs.cpp
  vibrations_funcs.cpp
  viewbasis_funcs.cpp
  vieweigenvector_funcs.cpp
  zmatrix_funcs.cpp
)

# Resources
set(gui_RES_QRC
  icons.qrc 
)
QT5_ADD_RESOURCES(gui_RES ${gui_RES_QRC})

# Target 'gui'
add_library(gui
  ${gui_RES}
  ${gui_UIS_H}
  ${gui_SRCS}
  ${gui_MOC_SRCS}
)

# Target 'treegui'
add_library(treegui
  ${treegui_UIS_H}
  ${treegui_MOC_SRCS}
  treegui_funcs.cpp
)

