# Don't forget to include output directory, otherwise
# the UI file won't be wrapped!
# Meta-Objects
SET(gui_MOC_HDRS
  disorderoptions.h
  disorderwizard.h
  exportfilm.h
  exportimage.h
  ffeditor.h
  fileselectorwidget.h
  glyphs.h
  layoutlist.h
  mainwindow.h
  openmodel.h
  popupbuildaddatom.h
  popupbuildaddh.h
  popupbuildclear.h
  popupbuildfragments.h
  popupbuildgrow.h
  popupbuildrebond.h
  popupbuildtransmute.h
  popupcellangles.h
  popupcelllengths.h
  popupcellmatrix.h
  popupcellmiller.h
  popupcellreplicate.h
  popupcellscale.h
  popupcellspacegroup.h
  popupcolour.h
  popupelementtable.h
  popupfileaten.h
  popupfileimage.h
  popupfileopen.h
  popupfilesave.h
  popupfilesession.h
  popupforcefieldsassign.h
  popupforcefieldsminimise.h
  popupforcefieldsopen.h
  popupforcefieldstest.h
  popupgridmatrix.h
  popupgridorigin.h
  popupgridset.h
  popupgridshift.h
  popupgridstyle.h
  popupgridsopen.h
  popupmeasureangle.h
  popupmeasureclear.h
  popupmeasuredistance.h
  popupmeasuretorsion.h
  popupporesdrill.h
  popupporesscheme.h
  popupscriptsopen.h
  popuptransformangle.h
  popuptransformcentre.h
  popuptransformconvert.h
  popuptransformdistance.h
  popuptransformflip.h
  popuptransformmultiply.h
  popuptransformreposition.h
  popuptransformrotate.h
  popuptransformshift.h
  popuptransformtorsion.h
  popuptransformtranslate.h
  popupviewcolourscheme.h
  popupviewreset.h
  popupviewstyle.h
  prefs.h
  progress.h
  selectpattern.h
  selectvariable.h
  vibrations.h
  viewbasis.h
  vieweigenvector.h
  zmatrix.h
  tcolourwheel.hui
  tdoublespindelegate.hui
  texponentialspin.hui
  textratreewidgetitem.h
  fileselectorwidget.h
  tintegerspindelegate.hui
  tmenubutton.hui
  tmenubuttongroup.h
  tpopupwidget.hui
  trecentfiles.hui
  ttablewidget.hui
  ttabwidget.hui
  ttreewidget.hui
  viewer.hui
)
QT5_WRAP_CPP(gui_MOC_SRCS ${gui_MOC_HDRS})

set(treegui_MOC_HDRS
  treegui.h
)
QT5_WRAP_CPP(treegui_MOC_SRCS ${treegui_MOC_HDRS})

# User Interface Files
SET(gui_UIS
  disorderoptions.ui
  disorderwizard.ui
  exportfilm.ui
  exportimage.ui
  ffeditor.ui
  glyphs.ui
  mainwindow.ui
  openmodel.ui
  popupbuildaddatom.ui
  popupbuildaddh.ui
  popupbuildclear.ui
  popupbuildfragments.ui
  popupbuildgrow.ui
  popupbuildrebond.ui
  popupbuildtransmute.ui
  popupcellangles.ui
  popupcelllengths.ui
  popupcellmatrix.ui
  popupcellmiller.ui
  popupcellreplicate.ui
  popupcellscale.ui
  popupcellspacegroup.ui
  popupcolour.ui
  popupelementtable.ui
  popupfileaten.ui
  popupfileimage.ui
  popupfileopen.ui
  popupfilesave.ui
  popupfilesession.ui
  popupforcefieldsassign.ui
  popupforcefieldsminimise.ui
  popupforcefieldsopen.ui
  popupforcefieldstest.ui
  popupgridmatrix.ui
  popupgridorigin.ui
  popupgridset.ui
  popupgridshift.ui
  popupgridstyle.ui
  popupgridsopen.ui
  popupmeasureangle.ui
  popupmeasureclear.ui
  popupmeasuredistance.ui
  popupmeasuretorsion.ui
  popupporesdrill.ui
  popupporesscheme.ui
  popupscriptsopen.ui
  popuptransformangle.ui
  popuptransformcentre.ui
  popuptransformconvert.ui
  popuptransformdistance.ui
  popuptransformflip.ui
  popuptransformmultiply.ui
  popuptransformrotate.ui
  popuptransformreposition.ui
  popuptransformshift.ui
  popuptransformtorsion.ui
  popuptransformtranslate.ui
  popupviewcolourscheme.ui
  popupviewreset.ui
  popupviewstyle.ui
  prefs.ui
  progress.ui
  selectpattern.ui
  selectvariable.ui
  fileselectorwidget.ui
  vibrations.ui
  viewbasis.ui
  vieweigenvector.ui
  zmatrix.ui
)
QT5_WRAP_UI(gui_UIS_H ${gui_UIS})

SET(treegui_UIS
  treegui.ui
)
QT5_WRAP_UI(treegui_UIS_H ${treegui_UIS})

# Source files
set(gui_SRCS
  useractions.h
  useractions.cpp
  disorderoptions_funcs.cpp
  disorderwizard_funcs.cpp
  exportfilm_funcs.cpp
  exportimage_funcs.cpp
  ffeditor_funcs.cpp
  fileselectorwidget_funcs.cpp
  glyphs_funcs.cpp
  layoutlist.cpp
  mainwindow_atoms.cpp
  mainwindow_context.cpp
  mainwindow_film.cpp
  mainwindow_funcs.cpp
  mainwindow_image.cpp
  mainwindow_interaction.cpp
  mainwindow_models.cpp
  mainwindow_messages.cpp
  mainwindow_models.cpp
  mainwindow_panel_build.cpp
  mainwindow_panel_calculate.cpp
  mainwindow_panel_cell.cpp
  mainwindow_panel_forcefields.cpp
  mainwindow_panel_grids.cpp
  mainwindow_panel_home.cpp
  mainwindow_panel_select.cpp
  mainwindow_panel_selection.cpp
  mainwindow_panel_tools.cpp
  mainwindow_panel_transform.cpp
  mainwindow_panel_trajectory.cpp
  mainwindow_quickcommand.cpp
  mainwindow_session.cpp
  mainwindow_update.cpp
  openmodel_funcs.cpp
  popupbuildaddatom_funcs.cpp
  popupbuildaddh_funcs.cpp
  popupbuildclear_funcs.cpp
  popupbuildfragments_funcs.cpp
  popupbuildgrow_funcs.cpp
  popupbuildrebond_funcs.cpp
  popupbuildtransmute_funcs.cpp
  popupcellangles_funcs.cpp
  popupcelllengths_funcs.cpp
  popupcellmatrix_funcs.cpp
  popupcellmiller_funcs.cpp
  popupcellreplicate_funcs.cpp
  popupcellscale_funcs.cpp
  popupcellspacegroup_funcs.cpp
  popupcolour_funcs.cpp
  popupelementtable_funcs.cpp
  popupfileaten_funcs.cpp
  popupfileimage_funcs.cpp
  popupfileopen_funcs.cpp
  popupfilesave_funcs.cpp
  popupfilesession_funcs.cpp
  popupforcefieldsassign_funcs.cpp
  popupforcefieldsminimise_funcs.cpp
  popupforcefieldsopen_funcs.cpp
  popupforcefieldstest_funcs.cpp
  popupgridmatrix_funcs.cpp
  popupgridorigin_funcs.cpp
  popupgridset_funcs.cpp
  popupgridshift_funcs.cpp
  popupgridstyle_funcs.cpp
  popupgridsopen_funcs.cpp
  popupmeasureangle_funcs.cpp
  popupmeasureclear_funcs.cpp
  popupmeasuredistance_funcs.cpp
  popupmeasuretorsion_funcs.cpp
  popupporesdrill_funcs.cpp
  popupporesscheme_funcs.cpp
  popupscriptsopen_funcs.cpp
  popuptransformangle_funcs.cpp
  popuptransformcentre_funcs.cpp
  popuptransformconvert_funcs.cpp
  popuptransformdistance_funcs.cpp
  popuptransformflip_funcs.cpp
  popuptransformmultiply_funcs.cpp
  popuptransformreposition_funcs.cpp
  popuptransformrotate_funcs.cpp
  popuptransformshift_funcs.cpp
  popuptransformtorsion_funcs.cpp
  popuptransformtranslate_funcs.cpp
  popupviewcolourscheme_funcs.cpp
  popupviewreset_funcs.cpp
  popupviewstyle_funcs.cpp
  prefs_funcs.cpp
  progress_funcs.cpp
  selectpattern_funcs.cpp
  selectvariable_funcs.cpp
  settings.cpp
  viewer_extras.cpp
  viewer_funcs.cpp
  viewer_key.cpp
  viewer_model.cpp
  viewer_mouse.cpp
  viewer_offscreen.cpp
  viewer_scene.cpp
  viewer_useractions.cpp
  tcolourwheel_funcs.cpp
  tmenubutton_funcs.cpp
  tmenubuttongroup.cpp
  tpopupwidget_funcs.cpp
  tdoublespindelegate_funcs.cpp
  texponentialspin_funcs.cpp
  tintegerspindelegate_funcs.cpp
  ttabwidget_funcs.cpp
  trecentfiles_funcs.cpp
  textratreewidgetitem_funcs.cpp
  vibrations_funcs.cpp
  viewbasis_funcs.cpp
  vieweigenvector_funcs.cpp
  zmatrix_funcs.cpp
)

# Resources
set(gui_RES_QRC
  icons.qrc 
)
QT5_ADD_RESOURCES(gui_RES ${gui_RES_QRC})

# Target 'gui'
add_library(gui
  ${gui_RES}
  ${gui_UIS_H}
  ${gui_SRCS}
  ${gui_MOC_SRCS}
)
target_include_directories(gui PRIVATE
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_BINARY_DIR}/src
  ${Qt5Widgets_INCLUDE_DIRS}
  ${FREETYPE_INCLUDE_DIRS}
)

# Target 'treegui'
add_library(treegui
  ${treegui_UIS_H}
  ${treegui_MOC_SRCS}
  treegui_funcs.cpp
)
target_include_directories(treegui PRIVATE
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_BINARY_DIR}/src
  ${Qt5Widgets_INCLUDE_DIRS}
)
target_link_libraries(treegui plugins gui)
