add_library(main
  aten.h
  cli.h 
  version.h 
  aten.cpp
  cli.cpp
  commands.cpp
  current.cpp
  ff.cpp
  filters.cpp
  fragments.cpp
  includes.cpp
  models.cpp
  modes.cpp
  partitions.cpp
  prefs.cpp
  probe.cpp
  scripts.cpp
)
target_include_directories(main PRIVATE
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_BINARY_DIR}/src
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Gui_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
  ${READLINE_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/src/gui
)
target_link_libraries(main gui) 
