noinst_LIBRARIES = libmain.a

libmain_a_SOURCES = aten.cpp cli.cpp commands.cpp ff.cpp filters.cpp fragments.cpp image.cpp includes.cpp models.cpp modes.cpp partitions.cpp prefs.cpp probe.cpp scripts.cpp

noinst_HEADERS = aten.h cli.h version.h

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @GUI_CFLAGS@
