add_library(methods
calculable.h 
cg.h 
delaunay.h
disorderdata.h
geometry.h 
linemin.h 
mc.h 
partition.h
pdens.h 
rdf.h 
sd.h
calculable.cpp 
cg.cpp 
delaunay.cpp
disorder.cpp
disorderdata.cpp
geometry.cpp 
linemin.cpp 
mc.cpp 
partition.cpp
pdens.cpp 
rdf.cpp 
sd.cpp
)

include_directories(
../
${QT_INCLUDE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_SOURCE_DIR}/src/gui
${CMAKE_BINARY_DIR}/src
)
