noinst_LIBRARIES = libmethods.a

libmethods_a_SOURCES = calculable.cpp cg.cpp delaunay.cpp linemin.cpp mc.cpp md.cpp geometry.cpp pdens.cpp rdf.cpp sd.cpp 

noinst_HEADERS = calculable.h cg.h delaunay.h linemin.h mc.h md.h geometry.h pdens.h rdf.h sd.h

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @GUI_CFLAGS@
