noinst_LIBRARIES = libmethods.a

libmethods_a_SOURCES = calculable.cpp cg.cpp delaunay.cpp disorder.cpp disorderdata.cpp geometry.cpp linemin.cpp mc.cpp partition.cpp pdens.cpp rdf.cpp sd.cpp 

noinst_HEADERS = calculable.h cg.h delaunay.h disorderdata.h geometry.h linemin.h mc.h partition.h pdens.h rdf.h sd.h

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @ATEN_CFLAGS@
