noinst_LTLIBRARIES = libmethods.la

libmethods_la_SOURCES = calculable.cpp cg.cpp delaunay.cpp disorder.cpp disorderdata.cpp geometry.cpp linemin.cpp mc.cpp partitioncelldata.cpp partitiondata.cpp partitioningscheme.cpp pdens.cpp rdf.cpp sd.cpp 

noinst_HEADERS = calculable.h cg.h delaunay.h disorderdata.h geometry.h linemin.h mc.h partitioncelldata.h partitiondata.h partitioningscheme.h pdens.h rdf.h sd.h

AM_CPPFLAGS = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @ATEN_INCLUDES@ @ATEN_CFLAGS@
