add_library(model
clipboard.h
fragment.h
model.h
undoevent.h
undostate.h
atom.cpp 
bond.cpp 
build.cpp 
cell.cpp 
clipboard.cpp
component.cpp
energy.cpp 
expression.cpp 
fragment.cpp
glyph.cpp
grid.cpp
measure.cpp 
model.cpp 
modelextras.cpp 
molecule.cpp 
pattern.cpp 
select.cpp 
selection.cpp
site.cpp 
trajectory.cpp 
transform.cpp 
typing.cpp 
undo.cpp 
undoevent.cpp
undostate.cpp
view.cpp
zmatrix.cpp
)

include_directories(
../
${QT_INCLUDE_DIR}
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
)
