noinst_LIBRARIES = libmodel.a

libmodel_a_SOURCES = atom.cpp bond.cpp build.cpp cell.cpp clipboard.cpp component.cpp energy.cpp expression.cpp glyph.cpp grid.cpp measure.cpp model.cpp modelaccess.cpp molecule.cpp pattern.cpp select.cpp selection.cpp site.cpp trajectory.cpp transform.cpp typing.cpp undo.cpp undoevent.cpp undostate.cpp view.cpp


noinst_HEADERS = clipboard.h model.h undoevent.h undostate.h

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @GUI_CFLAGS@
