noinst_LTLIBRARIES = libmodel.la

libmodel_la_SOURCES = atom.cpp bond.cpp build.cpp bundle.cpp cell.cpp clipboard.cpp component.cpp energy.cpp expression.cpp fragment.cpp fragmentgroup.cpp glyph.cpp grid.cpp icon.cpp labels.cpp log.cpp measure.cpp model.cpp modelextras.cpp molecule.cpp pattern.cpp render.cpp select.cpp selection.cpp site.cpp trajectory.cpp transform.cpp typing.cpp undo.cpp undoevent.cpp undostate.cpp view.cpp zmatrix.cpp

noinst_HEADERS = bundle.h clipboard.h fragment.h fragmentgroup.h model.h undoevent.h undostate.h

AM_CPPFLAGS = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @ATEN_INCLUDES@ @ATEN_CFLAGS@
