noinst_LIBRARIES = libnucommand.a

#libcommand_a_SOURCES = analyse.cpp atom.cpp bonds.cpp build.cpp cell.cpp charge.cpp colourscale.cpp command.cpp commandlist.cpp commands.cpp disorder.cpp edit.cpp energy.cpp filter.cpp flow.cpp forcefield.cpp forces.cpp format.cpp formatnode.cpp functions.cpp glyph.cpp grid.cpp image.cpp labels.cpp mc.cpp measure.cpp messaging.cpp minimise.cpp model.cpp pattern.cpp prefs.cpp readwrite.cpp script.cpp select.cpp site.cpp staticcommand.cpp system.cpp trajectory.cpp transform.cpp variables.cpp view.cpp
libnucommand_a_SOURCES = build.cpp commands.cpp functions.cpp testfuncs.cpp

noinst_HEADERS = commands.h

#noinst_HEADERS = command.h commandlist.h commands.h filter.h format.h formatnode.h staticcommand.h

INCLUDES = -I$(top_srcdir)/src -I../ -I$(top_srcdir)/src/gui @GUI_CFLAGS@
